[package]
name = "erc20_transfer_checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.71"
ethers = "2.0.13"
maplit = "1.0.2"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
